--- a/Kontroldarbs/index.html
+++ b/Kontroldarbs/index.html
@@ -10,20 +10,55 @@
 
 </head>
 <body>
-    <div class="container1">
-<h1 class="virsraksts">Mana vizītkarte</h1>
- 
- 
+
+<div class="Galvene">
+
+<h1 class="Virsraksts">Mana vizītkarte</h1>
+
+<div class="VisasPogas ">
 <a class="btn btn-outline" href="#" role="button">Karuselis</a>
 <a class="btn btn-outline" href="#" role="button">Prasmes</a>
 <a class="btn btn-outline" href="#" role="button">Pieredze</a>
 <a class="btn btn-outline" href="#" role="button">Kājene</a>
-
+</div>
 
 </div>
 
+<div class="container">
 
+    <div id="carouselExample" class="carousel slide">
 
+        <div class="carousel-inner">
+          
+          <div class="carousel-item">
+            <img src="./Photos/Gleznošana.png" class="d-block w-100" alt="Bildes nav">
+          </div>
 
+          <div class="carousel-item">
+            <img src="./Photos/Lasīšana.png" class="d-block w-100" alt="Bildes nav">
+          </div>
+
+          <div class="carousel-item active">
+            <img src="./Photos/Mūzika.png" class="d-block w-100" alt="Bildes nav">
+          </div>
+
+        <div class="carousel-item active">
+            <img src="./Photos/Medicīna.png" class="d-block w-100" alt="Bildes nav">
+          </div>
+        </div>
+
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+    
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
