--- a/Kontroldarbs/index.html
+++ b/Kontroldarbs/index.html
@@ -16,7 +16,7 @@
 <h1 class="Virsraksts">Mana vizītkarte</h1>
 
 <div class="VisasPogas ">
-<a class="btn btn-outline" href="#" role="button">Karuselis</a>
+<a class="btn btn-outline" href="#carouselExample" role="button">Intereses</a>
 <a class="btn btn-outline" href="#" role="button">Prasmes</a>
 <a class="btn btn-outline" href="#" role="button">Pieredze</a>
 <a class="btn btn-outline" href="#" role="button">Kājene</a>
@@ -24,9 +24,11 @@
 
 </div>
 
-<div class="container">
 
-    <div id="carouselExample" class="carousel slide">
+
+<div class="container1 ">
+
+    <div id="carouselExample" class="carousel slide ">
 
         <div class="carousel-inner">
           
