--- a/Kontroldarbs/index.html
+++ b/Kontroldarbs/index.html
@@ -61,6 +61,24 @@
     
 </div>
 
+
+<div class="container2">
+
+  <p class="x">Teksts1</p>
+  <p class="x">Teksts2</p>
+  <p class="x">Teksts3</p>
+  <p class="y">Teksts4</p>
+  <p class="y">Teksts5</p>
+
+</div>
+
+
+
+
+
+
+
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
