--- a/Kontroldarbs/index.html
+++ b/Kontroldarbs/index.html
@@ -61,19 +61,21 @@
     
 </div>
 
-
-<div class="container2">
+<h1 class="VirsrakstsPrasmes">Prasmes</h1>
+<div class="container2 ">
 
   <p class="x">Teksts1</p>
   <p class="x">Teksts2</p>
   <p class="x">Teksts3</p>
-  <p class="y">Teksts4</p>
-  <p class="y">Teksts5</p>
-
+  <p class="x">Teksts4</p>
+ 
 </div>
 
 
-
+<div class="container3">
+ <p class="y">Teksts5</p>
+ <p class="y">Teksts6</p>
+</div>
 
 
 
