--- a/Kontroldarbs/index.html
+++ b/Kontroldarbs/index.html
@@ -8,11 +8,20 @@
     <title>Mana vizītkarte</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Kalam&family=Vollkorn:ital@1&display=swap" rel="stylesheet">
     
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300&family=EB+Garamond&family=Kalam&family=Kalnia:wght@300&family=Source+Code+Pro&family=Vollkorn:ital@1&display=swap" rel="stylesheet">
    
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Afacad&family=Cormorant+Garamond:wght@300;400&family=EB+Garamond&family=Kalam&family=Kalnia:wght@300&family=Raleway&family=Source+Code+Pro&family=Vollkorn:ital@1&display=swap" rel="stylesheet">
 
 
-    <link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="style.css">
 
 </head>
 <body>
@@ -127,14 +136,18 @@
         </div>
       </div>
 
+
 <div id="Leja" class="Kājene">
+
+ 
 
     <li> <a href="https://www.instagram.com/rachelsouthard/?hl=en" target="_blank"> <img class="ikona1" src="./Photos/instagram.svg" > </a> </li>
     <li> <a href="https://www.youtube.com/@TED/videos" target="_blank"> <img class="ikona2" src="./Photos/youtube.svg" > </a> </li>
     <li> <a href="https://www.facebook.com/salaspils1vsk" target="_blank"> <img class="ikona3" src="./Photos/facebook.svg" > </a> </li>
-
+<p class="Autortiesības">© 2023</p>
+  
 </div>
-
+ 
 
 
 
